# LPHaskell

./: CHANGELOG.md  LPHaskell.cabal  README.md
app/: Logic.lhs  Main.lhs  Utils.lhs  logic.lhs  main.lhs  utils.lhs
