cabal-version:      3.0
name:               LPHaskell
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Daniel Baeta
maintainer:         11895757606@estudante.ufjf.br

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable LPHaskell
    main-is:          main.lhs

    -- Modules included in this executable, other than Main.
    other-modules: Logic, Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, random
    hs-source-dirs:   app
    default-language: Haskell2010
